clusters/nishir/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tags: tag:syncthing
    tailscale.com/tailnet-fqdn: nishir-syncthing-private.tail9fed3.ts.net
    tailscale.com/hostname: nishir-syncthing-private-proxy
  name: nishir-syncthing-private
  namespace: shikanime
spec:
  externalName: ""
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tags: tag:syncthing
    tailscale.com/tailnet-fqdn: ishtar.tail9fed3.ts.net
    tailscale.com/hostname: nishir-ishtar-proxy
  name: ishtar
  namespace: shikanime
spec:
  externalName: ""
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tags: tag:syncthing
    tailscale.com/tailnet-fqdn: altashar.tail9fed3.ts.net
    tailscale.com/hostname: nishir-altashar-proxy
  name: altashar
  namespace: shikanime
spec:
  externalName: ""
  type: ExternalName
