clusters/nishir/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nishir
  namespace: shikanime
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
    - name: tcp
      port: 22000
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Same
