clusters/nishir/base/shikanime-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: shikanime
spec:
  podSelector: {}
  policyTypes:
    - Ingress
